[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Obstacle.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]

[sub_resource type="PhysicsMaterial" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 30, 1, 30 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 60, 2, 60 )

[sub_resource type="CylinderMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.858824, 0.27451, 0.27451, 1 )

[sub_resource type="Curve3D" id=6]
_data = {
"points": PoolVector3Array( 0, 0, 0, 0, 0, 0, -26.5127, 1.61417, -24.6773, 0, 0, 0, 0, 0, 0, 26.699, 1.65133, -25.4708, 0, 0, 0, 0, 0, 0, 28.8653, -2.23381, 25.2331, 0, 0, 0, 0, 0, 0, -28.6615, -2.24373, 25.7391, 0, 0, 0, 0, 0, 0, -26.5127, 1.61417, -24.6773 ),
"tilts": PoolRealArray( 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
obstacle_scene = ExtResource( 2 )

[node name="Ground" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
physics_material_override = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Ground"]
shape = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Ground"]
mesh = SubResource( 3 )
material/0 = null

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.184946, 0.982749, 0, -0.982749, -0.184946, 0.0308571, 42.2339, -81.0726 )
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0826013, 0 )

[node name="CameraPivot" type="Position3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0826013, 0 )

[node name="Camera" type="Camera" parent="Player/CameraPivot"]
transform = Transform( 1, 0, 0, 0, 0.940145, 0.340773, 0, -0.340773, 0.940145, 0, 5.29583, 5.67094 )

[node name="Cylinders" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 2, -26 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MeshInstance2" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 2, -26 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MeshInstance3" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -27, 2, 24 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="MeshInstance4" type="MeshInstance" parent="Cylinders"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 27, 2, 24 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="SpawnPath" type="Path" parent="."]
curve = SubResource( 6 )

[node name="SpawnLocation" type="PathFollow" parent="SpawnPath"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -26.5127, 1.61417, -24.6773 )

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="ObstacleTimer" to="." method="_on_ObstacleTimer_timeout"]
